--- a/CC-Electron/src/renderer/styles/title-bar.css
+++ b/CC-Electron/src/renderer/styles/title-bar.css
@@ -1,4 +1,4 @@
-#title-bar {
+#bar-title {
     align-items: center;
     display: flex;
     flex: 0 0 fit-content;
@@ -8,7 +8,7 @@
     -webkit-user-select: none;
 }
 
-#version {
+#label-version {
     flex: 0 0 fit-content;
     margin-right: auto;
     margin-left: var(--tb-p-lmargin);
@@ -18,22 +18,22 @@
     font-weight: var(--def-p-fweight);
 }
 
-.tb-btn {
+.title-btn {
     flex: 0 0 fit-content;
     padding: var(--tb-btn-vpadding) var(--tb-btn-hpadding);
 
     -webkit-app-region: no-drag;
 }
 
-.tb-btn:hover {
+.title-btn:hover {
     background-color: var(--pmc-sh6);
 }
 
-#close-trigger:hover {
+#btn-close:hover {
     background-color: #FF0000;
 }
 
-.tb-btn > svg {
+.title-btn > svg {
     display: block;
     height: var(--tb-btn-svg-length);
     width: var(--tb-btn-svg-length);
