--- a/CC-Electron/src/renderer/styles/client-area.css
+++ b/CC-Electron/src/renderer/styles/client-area.css
@@ -2,7 +2,7 @@
     display: flex;
     flex: 1 1 fit-content;
     flex-flow: row nowrap;
-    gap: var(--cla-hgap);
+    gap: var(--carea-hgap);
 
     overflow: hidden; /* for vertical scroll */
 }
