--- a/CC-Electron/src/renderer/styles/layout-variables.css
+++ b/CC-Electron/src/renderer/styles/layout-variables.css
@@ -2,235 +2,270 @@
     outline: 1px solid yellow;
 } */
 
-:root {
-    /* ==== def -> Default ==== */
-    --def-bradius: 10px;
+html {
+    /* ==== sbar -> Scroll Bar ==== */
+    --sbar-length: 20px;
 
-    --def-h4-fsize: 17px;
-    --def-h4-fweight: 350;
+    --sbar-thumb-bradius: calc(var(--sbar-length) / 2);
+    --sbar-thumb-bwidth: calc((var(--sbar-length) - 6px) / 2);
 
-    --def-hr-height: 1.5px;
+    /* ==== tbtn -> Title Button ==== */
+    --tbtn-hpadding: 15px;
+    --tbtn-vpadding: 7.5px;
 
-    --def-p-fsize: 11px;
-    --def-p-fweight: 300;
+    --tbtn-svg-length: 10px;
+
+    /* ==== vlabel -> Version Label ==== */
+    --vlabel-fsize: 11px;
+    --vlabel-fweight: 300;
+    --vlabel-lmargin: 10px;
+
+    /* ==== carea -> Client Area ==== */
+    --carea-hgap: 12px;
+
+    /* ==== nblock -> Nav(igation) Block ==== */
+    --nblock-bradius: 10px;
+
+    /* ==== nbar -> Nav(igation) Bar ==== */
+    --nbar-vgap: 10px;
+    --nbar-padding: 10px;
+
+    --nbar-hr-height: 1.5px;
+    --nbar-hr-lmargin: calc(var(--nbar-padding) / -2);
+    --nbar-hr-width: calc(100% + var(--nbar-padding));
+
+    /* ==== ldp -> Logo Display ==== */
+    --ldp-hgap: 20px;
+
+    --ldp-h1-fsize: 28px;
+    --ldp-h1-fweight: 600;
+
+    --ldp-svg-length: 60px;
+
+    /* ==== nbtn -> Nav(igation) Button ==== */
+    --nbtn-bradius: 10px;
+    --nbtn-hgap: 40px;
+    --nbtn-hmargin: calc((var(--ldp-svg-length) - var(--nbtn-svg-length) - 2 * var(--nbtn-padding)) / 2);
+    --nbtn-padding: 10px;
+
+    --nbtn-span-fsize: 20px;
+    --nbtn-span-fweight: 400;
+
+    --nbtn-svg-length: 30px;
+
+    /* ==== nt -> Nav(igation) Toggle ==== */
+    --ntbtn-svg-length: 15px;
+
+    /* ==== cb -> Content Block ==== */
+    --cblock-bradius: 10px;
+
+    /* ==== ctr1 -> Container 1 ==== */
+    --cctr1-vgap: var(--nbar-vgap);
+    --cctr1-hpadding: calc(var(--nbar-padding) + var(--ntbtn-svg-length));
+    --cctr1-vpadding: var(--nbar-padding);
+
+    --cctr1-h2-fsize: 60px;
+    --cctr1-h2-fweight: 600;
+
+    --cctr1-hr-height: 1.5px;
+    --cctr1-hr-lmargin: var(--nbar-hr-lmargin);
+    --cctr1-hr-width: calc(100% + var(--cctr1-hpadding));
+
+    /* ==== ctr2 -> Container 2 ==== */
+    --cctr2-bradius: 10px;
+    --cctr2-vgap: 30px;
+    --cctr2-hpadding: var(--cctr1-hpadding);
+    --cctr2-vpadding: var(--cctr1-vpadding);
+
+    --cctr2-sb-track-margin: calc(var(--cctr2-vpadding) - var(--sbar-thumb-bwidth));
+
+    /* ==== ctr3 -> Container 3 ==== */
+    --cctr3-vgap: var(--nbar-vgap);
+
+    --cctr3-h3-fsize: 40px;
+    --cctr3-h3-fweight: 500;
+
+    --cctr3-hr-height: 1.5px;
+    --cctr3-hr-lmargin: var(--nbar-hr-lmargin);
+    --cctr3-hr-width: calc(100% + var(--cctr2-hpadding));
+
+    /* ==== dctr -> Directory Container ==== */
+    --dctr-bradius: 10px;
+    --dctr-height: calc(2 * var(--dgl-vpadding) + 2 * var(--vpctr-padding) + var(--vtn-height) + 3 * var(--vpctr-vgap) + var(--vpctr-h4-fsize) + var(--vpctr-p-fsize) + 2 * var(--vobtn-padding) + var(--vobtn-svg-length) + var(--sbar-length));
+
+    /* ==== dbtn -> Directory Button ==== */
+    --dbtn-svg-length: 15px;
+
+    /* ==== dgl -> Directory Gallery ==== */
+    --dgl-hmargin: 10px;
+    --dgl-vpadding: 10px;
+
+    --dgl-sb-track-margin: calc(-1 * var(--sbar-thumb-bwidth));
+
+    /* ==== vpctr -> Video Preview Container ==== */
+    --vpctr-bradius: 10px;
+    --vpctr-vgap: 10px;
+    --vpctr-padding: 10px;
     
-    /* ==== tb -> Title Bar ==== */
-    --tb-p-lmargin: 10px;
+    --vpctr-h4-fsize: 17px;
+    --vpctr-h4-fweight: 350;
 
-    --tb-btn-hpadding: 15px;
-    --tb-btn-vpadding: 7.5px;
+    --vpctr-p-fsize: 11px;
+    --vpctr-p-fweight: 300;
 
-    --tb-btn-svg-length: 10px;
+    /* ==== vtn -> Video Thumbnail ==== */
+    --vtn-bradius: 10px;
+    --vtn-height: 144px;
 
-    /* ==== cla -> Client Area ==== */
-    --cla-hgap: 12px;
+    /* ==== voctr -> Video Options Container ==== */
+    --voctr-hgap: 10px;
 
-    /* ==== nb -> Nav(igation) Bar ==== */
-    --nb-vgap: 10px;
-    --nb-padding: 10px;
+    /* ==== vobtn -> Video Options Button ==== */
+    --vobtn-bradius: 5px;
+    --vobtn-padding: 2px;
 
-    --nb-hr-lmargin: calc(-1 * var(--nb-padding) / 2);
-    --nb-hr-width: calc(100% + var(--nb-padding));
+    --vobtn-svg-length: 30px;
 
-    --nb-btn-bradius: var(--def-bradius);
-    --nb-btn-hgap: 40px;
-    --nb-btn-hmargin: calc((var(--ld-svg-length) - var(--nb-btn-svg-length) - 2 * var(--nb-btn-padding)) / 2);
-    --nb-btn-padding: 10px;
+    /* ==== vctr -> Video Container ==== */
+    --vctr-bradius: 10px;
+    --vctr-height: 75%;
+    --vctr-width: 80%;
 
-    --nb-btn-span-fsize: 20px;
-    --nb-btn-span-fweight: 400;
+    /* ==== psl -> Playback Slider ==== */
+    --psl-hmargin: 6px;
+    /* --psl-width: var(--vctr-width); */
+    --psl-width: 9000px;
 
-    --nb-btn-svg-length: 30px;
+    --psl-thumb-height: 3px;
+    --psl-thumb-hover-height: 8px;
 
-    /* ==== ld -> Logo Display ==== */
-    --ld-hgap: 20px;
-
-    --ld-h1-fsize: 28px;
-    --ld-h1-fweight: 600;
-
-    --ld-svg-length: 60px;
-
-    /* ==== np -> Nav(igation) Panel ==== */
-    --np-bradius: var(--def-bradius);
-
-    /* ==== ne -> Nav(igation) Expander ==== */
-    --ne-svg-length: 15px;
-
-    /* ==== cp -> Content Panel ==== */
-    --cp-bradius: var(--def-bradius);
-
-    /* ==== cl1 -> Container Level 1 ==== */
-    --cl1-vgap: var(--nb-vgap);
-    --cl1-hpadding: calc(var(--nb-padding) + var(--ne-svg-length));
-    --cl1-vpadding: var(--nb-padding);
-
-    --cl1-h2-fsize: 60px;
-    --cl1-h2-fweight: 600;
-
-    --cl1-hr-lmargin: var(--nb-hr-lmargin);
-    --cl1-hr-width: calc(100% + var(--cl1-hpadding));
-
-    /* ==== cl2 -> Container Level 2 ==== */
-    --cl2-bradius: var(--def-bradius);
-    --cl2-vgap: 30px;
-    --cl2-hpadding: var(--cl1-hpadding);
-    --cl2-vpadding: var(--cl1-vpadding);
-
-    --cl2-sb-track-margin: calc(var(--cl2-vpadding) - var(--sb-thumb-bwidth));
-
-    /* ==== cl3 -> Container Level 3 ==== */
-    --cl3-vgap: var(--nb-vgap);
-
-    --cl3-h3-fsize: 40px;
-    --cl3-h3-fweight: 500;
-
-    --cl3-hr-lmargin: var(--nb-hr-lmargin);
-    --cl3-hr-width: calc(100% + var(--cl2-hpadding));
-
-    /* ==== stg -> Settings Group ==== */
-    --stg-hgap: 30px;
-
-    /* ==== st -> Setting ==== */
-    --st-bradius: var(--def-bradius);
-    --st-vgap: 5px;
-    --st-hpadding: var(--cl2-hpadding);
-    --st-vpadding: var(--cl2-vpadding);
-
-    /* ==== vc -> Video Container ==== */
-    --vc-bradius: var(--def-bradius);
-    --vc-height: 75%;
-    --vc-width: 80%;
-
-    /* ==== ps -> Playback Slider ==== */
-    --ps-hmargin: 6px;
-    /* --ps-width: var(--vc-width); */
-    --ps-width: 9000px;
-
-    --ps-thumb-height: 3px;
-    --ps-thumb-hover-height: 8px;
-
-    /* ==== pb -> Playback Bar ==== */
-
-    --pb-btn-bradius: 5px;
-    --pb-btn-margin: 3px;
+    /* ==== pbtn -> Playback Button ==== */
+    --pbtn-bradius: 5px;
+    --pbtn-margin: 3px;
     
-    --pb-btn-span-fsize: 20px;
-    --pb-btn-span-fweight: 400;
-    --pb-btn-span-hpadding: var(--pb-btn-span-vpadding);
-    --pb-btn-span-vpadding: calc((var(--pb-btn-svg-length) - var(--pb-btn-span-fsize)) / 2);
+    --pbtn-svg-length: 40px;
 
-    --pb-btn-span1-width: 3ch;
+    /* ==== slabel -> Speed Label ==== */
+    --slabel-fsize: 20px;
+    --slabel-fweight: 400;
 
-    --pb-btn-svg-length: 40px;
+    /* ==== cslabel -> Current Speed Label ==== */
+    --cslabel-hpadding: var(--cslabel-vpadding);
+    --cslabel-vpadding: calc((var(--pbtn-svg-length) - var(--slabel-fsize)) / 2);
+    --cslabel-width: 3ch;
 
-    --pb-input-thumb-height: 16px;
-    --pb-input-thumb-tmargin: calc(-1 * (var(--pb-input-thumb-height) - var(--pb-input-track-height)) / 2);
+    /* ==== mlabel -> Multiplier Label ==== */
+    --mlabel-hpadding: var(--cslabel-hpadding);
+    --mlabel-vpadding: var(--cslabel-vpadding);
 
-    --pb-input-track-height: 4px;
+    /* ==== pinput -> Playback Input ==== */
+    --pinput-thumb-height: 16px;
+    --pinput-thumb-tmargin: calc((var(--pinput-thumb-height) - var(--pinput-track-height)) / -2);
 
-    /* ==== vs -> Volume Slider ==== */
-    --vs-rmargin: var(--vs-vpadding);
-    --vs-vpadding: calc((var(--pb-btn-svg-length) - var(--pb-input-thumb-height)) / 2);
-    --vs-width: 100px;
+    --pinput-track-height: 4px;
 
-    --vs-thumb-bradius: calc(var(--pb-input-thumb-height) / 2);
-    --vs-thumb-width: var(--pb-input-thumb-height);
+    /* ==== vsl -> Volume Slider ==== */
+    --vsl-rmargin: var(--vsl-vpadding);
+    --vsl-vpadding: calc((var(--pbtn-svg-length) - var(--pinput-thumb-height)) / 2);
+    --vsl-width: 100px;
 
-    /* ==== ss -> Speed Slider ==== */
-    --ss-vpadding: var(--vs-vpadding);
-    --ss-width: 150px;
+    --vsl-thumb-bradius: calc(var(--pinput-thumb-height) / 2);
+    --vsl-thumb-width: var(--pinput-thumb-height);
 
-    --ss-thumb-bradius: calc(var(--ss-thumb-width) / 2);
-    --ss-thumb-width: 4px;
+    /* ==== ssl -> Speed Slider ==== */
+    --ssl-vpadding: var(--vsl-vpadding);
+    --ssl-width: 150px;
 
-    /* ==== ti -> Time Indicator ==== */
-    --ti-span-hpadding: var(--ti-span-vpadding);
-    --ti-span-vpadding: calc((var(--pb-btn-svg-length) - var(--ti-span-fsize)) / 2);
-    --ti-span-fsize: 15px;
-    --ti-span-fweight: 400;
+    --ssl-thumb-bradius: calc(var(--ssl-thumb-width) / 2);
+    --ssl-thumb-width: 4px;
 
-    --ti-span1-width: 5ch;
+    /* ==== tlabel -> Time Label ==== */
+    --tlabel-fsize: 15px;
+    --tlabel-fweight: 400;
 
-    /* ==== tc -> Timeline Container ==== */
-    --tc-bradius: var(--def-bradius);
-    --tc-height: 60px;
-    --tc-width: var(--vc-width);
+    /* ==== ctlabel -> Current Time Label ==== */
+    --ctlabel-hpadding: var(--ctlabel-vpadding);
+    --ctlabel-vpadding: calc((var(--pbtn-svg-length) - var(--ctlabel-fsize)) / 2);
+    --ctlabel-width: 5ch;
 
-    /* ==== tl -> Timeline ==== */
-    --tl-swidth: 1px;
+    /* ==== ttlabel -> Total Time Label ==== */
+    --ttlabel-hpadding: var(--ctlabel-hpadding);
+    --ttlabel-vpadding: var(--ctlabel-vpadding);
 
-    --tl-text-fsize: 12px;
-    --tl-text-fweight: 10;
+    /* ==== tctr -> Timeline Container ==== */
+    --tctr-bradius: 10px;
+    --tctr-height: 60px;
+    --tctr-width: var(--vctr-width);
+
+    /* ==== tmarker -> Timeline Marker ==== */
+    --tmarker-height: var(--tctr-height);
+    --tmarker-swidth: 1px;
+
+    --tmarker-text-fsize: 12px;
+    --tmarker-text-fweight: 10;
 
     /* ==== tls -> Timeline Slider ==== */
-    --tls-thumb-bradius: calc(var(--tls-thumb-width) / 2);
-    --tls-thumb-height: calc(-2 * var(--tls-thumb-tmargin) + var(--tc-height));
-    --tls-thumb-tmargin: -12px;
-    --tls-thumb-width: 4px;
+    --tslider-thumb-bradius: calc(var(--tslider-thumb-width) / 2);
+    --tslider-thumb-height: calc(-2 * var(--tslider-thumb-tmargin) + var(--tctr-height));
+    --tslider-thumb-tmargin: -12px;
+    --tslider-thumb-width: 4px;
 
-    --tls-track-height: var(--tc-height);
+    --tslider-track-height: var(--tctr-height);
 
-    /* ==== tm -> Timeline Marker ==== */
-    --tm-height: var(--tc-height);
+    /* ==== sgroup -> Settings Group ==== */
+    --sgroup-hgap: 30px;
 
-    /* ==== pl -> Pill ==== */
-    --pl-bradius: var(--def-bradius);
-    --pl-bwidth: 1px;
+    /* ==== sctr -> Setting Container ==== */
+    --sctr-bradius: 10px;
+    --sctr-vgap: 5px;
+    --sctr-hpadding: var(--cctr2-hpadding);
+    --sctr-vpadding: var(--cctr2-vpadding);
 
-    --pl-inputselect-hpadding: 10px;
-    --pl-inputselect-width: 110px;
+    --sctr-p-fsize: 11px;
+    --sctr-p-fweight: 300;
 
-    --pl-svg-length: 25px;
-    --pl-svg-margin: 5px;
+    --sctr-h4-fsize: 17px;
+    --sctr-h4-fweight: 350;
 
-    /* ==== csl -> Carousel ==== */
-    --csl-bradius: var(--def-bradius);
-    --csl-height: calc(2 * var(--gl-vpadding) + 2 * var(--vpv-padding) + var(--vt-height) + 3 * var(--vpv-vgap) + var(--def-h4-fsize) + var(--def-p-fsize) + 2 * var(--vo-btn-padding) + var(--vo-btn-svg-length) + var(--sb-length));
+    /* ==== spill -> Setting Pill ==== */
+    --spill-bradius: 10px;
+    --spill-bwidth: 1px;
 
-    /* ==== jm -> Jumper ==== */
-    --jm-svg-length: 15px;
+    --spill-inputselect-hpadding: 10px;
+    --spill-inputselect-width: 110px;
 
-    /* ==== gl -> Gallery ==== */
-    --gl-hmargin: 10px;
-    --gl-vpadding: 10px;
+    --spill-svg-length: 25px;
+    --spill-svg-margin: calc(5px - var(--spill-bwidth));
 
-    --gl-sb-track-margin: calc(-1 * var(--sb-thumb-bwidth));
+    /* ==== stswitch -> Setting Toggle Switch ==== */
+    --stswitch-width: 66px;
 
-    /* ==== vpv -> Video Preview ==== */
-    --vpv-bradius: var(--def-bradius);
-    --vpv-vgap: 10px;
-    --vpv-padding: 10px;
-
-    /* ==== vt -> Video Thumbnail ==== */
-    --vt-bradius: var(--def-bradius);
-    --vt-height: 144px;
-
-    /* ==== vo -> Video Options ==== */
-    --vo-hgap: 10px;
-
-    --vo-btn-bradius: 5px;
-    --vo-btn-padding: 2px;
-
-    --vo-btn-svg-length: 30px;
-
-    /* ==== sb -> Scroll Bar ==== */
-    --sb-length: 20px;
-
-    --sb-thumb-bwidth: calc((var(--sb-length) - 6px) / 2);
-    --sb-thumb-bradius: calc(var(--sb-length) / 2);
+    --stswitch-svg-bradius: 7.5px;
+    --stswitch-svg-height: calc(var(--spill-svg-length) + 2 * var(--spill-svg-margin) - 2 * var(--stswitch-svg-inset));
+    --stswitch-svg-inset: 2px;
+    --stswitch-svg-translateX: var(--stswitch-svg-width);
+    --stswitch-svg-width: calc(var(--stswitch-width) / 2 - var(--stswitch-svg-inset));
 }
 
 ::-webkit-scrollbar {
-    height: var(--sb-length);
-    width: var(--sb-length);
+    height: var(--sbar-length);
+    width: var(--sbar-length);
 }
 
 ::-webkit-scrollbar-thumb {
-    border: var(--sb-thumb-bwidth) solid transparent;
-    border-radius: var(--sb-thumb-bradius);
+    border: var(--sbar-thumb-bwidth) solid transparent;
+    border-radius: var(--sbar-thumb-bradius);
 
     background-clip: padding-box;
-    background-color: var(--cpc-sh1);
+    background-color: var(--sbar-thumb-bgcolor);
+}
+
+/* ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--sbar-thumb-bgcolor);
+} */
+
+::-webkit-scrollbar-corner {
+    background-color: transparent;
 }
 
 html {
@@ -243,14 +278,5 @@ body {
     height: 100%;
     margin: 0;
 
-    background-color: var(--pmc-sh3);
+    background-color: var(--body-bgcolor);
 }
-
-
-
-
-
-
-
-
-
